--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,8 @@ jobs:
 
     steps:
       - checkout
+      - setup_remote_docker:
+          version: 18.05.0-ce
       - run:
           name: Docker info
           command: |
