--- a/rstudio/Dockerfile
+++ b/rstudio/Dockerfile
@@ -1,6 +1,6 @@
 FROM rocker/rstudio:3.4.1
 
-RUN apt-get update 
+RUN apt-get update \
     && apt-get install -y libxml2-dev zlib1g-dev \
     && R -e 'install.packages("tidyverse")' \
     && R -e 'install.packages("devtools")' \
