--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs:
       - run:
           name: Push Docker Image
           command: |
-            ${DOCKER_PASSWORD} | docker login --username ${DOCKER_USER}
+            ${DOCKER_PASSWORD} | docker login --username ${DOCKER_USER} --password-stdin
             docker push thetinytechco/fitzroy:latest
             docker push thetinytechco/fitzroy:rstudio
             docker push thetinytechco/fitzroy:rstudio-${RSTUDIO_VERSION}
